--- a/Python_Basics/9.File_Handling/File_handle.ipynb
+++ b/Python_Basics/9.File_Handling/File_handle.ipynb
@@ -221,11 +221,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a new line of text\n",
+      "This is another line.\n",
+      "This is a test file.\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = open('test.txt', 'r')\n",
+    "print(f.read())\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(r\"D:\\Python\\Python Basics\\9.File_Handling\\test.txt\", 'a') as f:\n",
+    "with open(\"test.txt\", 'a') as f:\n",
     "    # Append the text to the end of the file\n",
     "    f.write(\"\\nThis is another line.\")\n",
     "    f.write(\"\\nThis is a test file.\")\n",
@@ -234,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -249,9 +270,11 @@
     }
    ],
    "source": [
-    "with open(r\"D:\\Python\\Python Basics\\9.File_Handling\\test.txt\", 'a+') as f:\n",
+    "with open(\"test.txt\", 'a+') as f:\n",
     "    f.write(\"\\nThis is a new line\")\n",
+    "    \n",
     "    f.seek(0)\n",
+    "    \n",
     "    print(f.read())\n",
     "    f.close() "
    ]
@@ -265,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -329,26 +352,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['test@example.com\\n', '123-456-7890\\n', 'Start this string\\n', 'This string ends with End\\n', '123456\\n', 'Contains whitespace \\n', 'pretest and posttest\\n', '@#!$%\\n', '5This does not start with a digit\\n', 'NoWhitespaceHere\\n']\n"
-     ]
-    }
-   ],
-   "source": [
-    "file = open(\"myfile.txt\", \"r\")\n",
-    "content = file.readlines()  # Reads the first 10 characters\n",
-    "print(content)\n",
-    "file.close()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -364,27 +367,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['test@example.com\\n', '123-456-7890\\n', 'Start this string\\n', 'This string ends with End\\n', '123456\\n', 'Contains whitespace \\n', 'pretest and posttest\\n', '@#!$%\\n', '5This does not start with a digit\\n', 'NoWhitespaceHere\\n']\n"
+      "test@example.com\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "f = open('myfile.txt','r')\n",
-    "str = f.readlines()\n",
-    "print(str)\n",
-    "f.close()"
+    "file = open(\"myfile.txt\", \"r\")\n",
+    "content = file.readline()  # Reads the first 10 characters\n",
+    "print(content)\n",
+    "file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['test@example.com\\n', '123-456-7890\\n', 'Start this string\\n', 'This string ends with End\\n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "file = open(\"myfile.txt\", \"r\")\n",
+    "content = file.readlines(50)  # Reads the first 10 characters\n",
+    "print(content)\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +494,8 @@
     "\tdata = file.readlines()\n",
     "\tfor line in data:\n",
     "\t\tword = line.split()\n",
-    "\t\tprint(word)\n"
+    "\t\tprint(word)\n",
+    "file.close()"
    ]
   },
   {
@@ -482,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,46 +519,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Current content of the file: I am a learner, Python is easy to learn'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f = open('myfile.txt','r')\n",
-    "f.read()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Content after writing: This is a new line of text\n"
+      "Current content of the file: I am a learner, Python is easy to learn\n"
      ]
     }
    ],
    "source": [
-    "# w+ example: Writing and then reading the file\n",
-    "with open('test.txt', 'w+') as file:\n",
-    "    file.write('This is a new line of text')  # Writing new content\n",
-    "    file.seek(0)  # Set file pointer to the beginning\n",
-    "    content = file.read()  # Reading the content back\n",
-    "    print('Content after writing:', content)\n",
-    "    file.close()\n"
+    "f = open('myfile.txt','r')\n",
+    "print(f.read())\n",
+    "f.close()"
    ]
   },
   {
@@ -547,7 +547,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('myfile.txt', 'w') as file:\n",
+    "    file.write(\"Welcome to TutorialsPoint\\n\")\n",
+    "    file.write(\"Write multiple lines\")\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to TutorialsPoint\n",
+      "Write multiple lines\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = open('myfile.txt','r')\n",
+    "print(f.read())\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,14 +587,14 @@
     "   l1 = \"Welcome to TutorialsPoint\\n\"\n",
     "   l2 = \"Write multiple lines\\n\"\n",
     "   l3 = \"Done successfully\\n\"\n",
-    "   l4 = \"Thank You!\"\n",
+    "   l4 = \"Thank You!\\n\"\n",
     "   file.writelines([l1, l2, l3, l4])\n",
     "   file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +604,18 @@
       "Welcome to TutorialsPoint\n",
       "Write multiple lines\n",
       "Done successfully\n",
-      "Thank You!\n"
+      "Thank You!\n",
+      "test@example.com\n",
+      "123-456-7890\n",
+      "Start this string\n",
+      "This string ends with End\n",
+      "123456\n",
+      "Contains whitespace \n",
+      "pretest and posttest\n",
+      "@#!$%\n",
+      "5This does not start with a digit\n",
+      "NoWhitespaceHere\n",
+      "\n"
      ]
     }
    ],
@@ -583,32 +626,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('myfile.txt', 'a') as file:\n",
+    "    for line in mixed_strings:\n",
+    "        file.writelines(line + '\\n') \n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Welcome to TutorialsPoint\\n', 'Write multiple lines\\n', 'Done successfully\\n', 'Thank You!']\n"
+      "['Welcome to TutorialsPoint\\n', 'Write multiple lines\\n', 'Done successfully\\n', 'Thank You!\\n', 'test@example.com\\n', '123-456-7890\\n', 'Start this string\\n', 'This string ends with End\\n', '123456\\n', 'Contains whitespace \\n', 'pretest and posttest\\n', '@#!$%\\n', '5This does not start with a digit\\n', 'NoWhitespaceHere\\n']\n",
+      "270\n"
      ]
     }
    ],
    "source": [
     "with open('myfile.txt', 'r') as file:\n",
-    "    print(file.readlines())"
+    "    print(file.readlines())\n",
+    "    print(file.tell())\n",
+    "    file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Welcome to TutorialsPoint', 'Write multiple lines', 'Done successfully', 'Thank You!']\n"
+      "['Welcome to TutorialsPoint', 'Write multiple lines', 'Done successfully', 'Thank You!', 'test@example.com', '123-456-7890', 'Start this string', 'This string ends with End', '123456', 'Contains whitespace ', 'pretest and posttest', '@#!$%', '5This does not start with a digit', 'NoWhitespaceHere']\n"
      ]
     }
    ],
@@ -621,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -659,21 +717,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "Hi\n",
+      "How ru\n",
+      "Good Night\n"
+     ]
+    }
+   ],
    "source": [
-    "f = open('myfile.txt', 'a')\n",
+    "f = open('myfile.txt', 'a+')\n",
     "\n",
     "str_to_write = '\\nGood Night'\n",
     "f.write(str_to_write)\n",
+    "\n",
+    "f.seek(0)\n",
+    "\n",
+    "print(f.read())\n",
     "\n",
     "f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +755,7 @@
        "['Hello', 'Hi', 'How ru', 'Good Night']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,34 +775,40 @@
     "\n",
     "In case, we want to move the file pointer to another position, we can use the seek() method.This method takes two arguments.\n",
     "- Here, 'offset' represents how many bytes to move. 'fromwhere' represents from which position to move.\n",
+    "    - 0: sets the reference point at the beginning of the file \n",
+    " \n",
+    "    - 1: sets the reference point at the current file position \n",
+    " \n",
+    "    - 2: sets the reference point at the end of the file \n",
+    "\n",
     "\n",
     "f.seek(offset, fromwhere)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello\n",
+      "llo\n",
       "Hi\n",
       "How ru\n",
-      "Good NightUse with statements for safer file handling.\n"
+      "Good NightCode is like humor. When you have to explain it, it’s bad.\n"
      ]
     }
    ],
    "source": [
     "f =open('myfile.txt','a+')\n",
     "\n",
-    "str = input(\"Enter Text\")\n",
+    "str = \"Code is like humor. When you have to explain it, it’s bad.\"\n",
     "\n",
     "f.write(str+\"\\n\")\n",
     "\n",
-    "f.seek(0)\n",
+    "f.seek(2, 0)\n",
     "\n",
     "str = f.read().strip()\n",
     "print(str)\n",
@@ -746,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +850,7 @@
       "Hello\n",
       "Hi\n",
       "How ru\n",
-      "Good NightUse with statements for safer file handling.\n",
+      "Good NightCode is like humor. When you have to explain it, it’s bad.\n",
       "\n"
      ]
     }
@@ -791,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -821,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -877,16 +956,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Name', 'Age', 'city']\n",
-      "['John', '25', 'New York']\n",
-      "['Jane', '30', 'Blore']\n"
+      "['Name', 'Age', 'City']\n",
+      "['Alice', '30', 'New York']\n",
+      "['Bob', '35', 'London']\n",
+      "['Charlie', '25', 'San Francisco']\n"
      ]
     }
    ],
@@ -896,7 +976,8 @@
     "with open(\"data.csv\", \"r\") as file:\n",
     "    reader = csv.reader(file)\n",
     "    for row in reader:\n",
-    "        print(row)\n"
+    "        print(row)\n",
+    "    file.close()\n"
    ]
   },
   {
@@ -908,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,17 +997,16 @@
     "    writer = csv.writer(file)\n",
     "    writer.writerow([\"Name\", \"Age\", \"City\"])\n",
     "    writer.writerow([\"Alice\", \"30\", \"New York\"])\n",
-    "    writer.writerow([\"Bob\", \"35\", \"London\"])"
+    "    writer.writerow([\"Bob\", \"35\", \"London\"])\n",
+    "    file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import csv\n",
-    "\n",
     "with open(\"data.csv\", \"w\", newline='') as file:\n",
     "    writer = csv.writer(file)\n",
     "    writer.writerow([\"Name\", \"Age\", \"City\"])\n",
