--- a/Python_Basics/9.File_Handling/File_handle.ipynb
+++ b/Python_Basics/9.File_Handling/File_handle.ipynb
@@ -956,7 +956,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +975,9 @@
       "['Name', 'Age', 'City']\n",
       "['Alice', '30', 'New York']\n",
       "['Bob', '35', 'London']\n",
-      "['Charlie', '25', 'San Francisco']\n"
+      "['Charlie', '25', 'San Francisco']\n",
+      "['Xyz', '36', 'Baglore']\n",
+      "['ABC', '14', 'Mumbai']\n"
      ]
     }
    ],
@@ -989,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1050,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1073,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1096,14 +1107,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['New York', 'London', 'San Francisco', 'Baglore']\n"
+      "['Alice', 'Bob', 'Charlie', 'Xyz']\n"
      ]
     }
    ],
@@ -1111,8 +1122,96 @@
     "with open(\"data.csv\", \"r\", newline='') as file:\n",
     "    reader = csv.reader(file)\n",
     "    header = next(reader)  # Skip the header row if there is one\n",
-    "    age_column = [row[2] for row in reader]  # Assuming \"Age\" is the second column\n",
+    "    age_column = [row[0] for row in reader]  # Assuming \"Age\" is the second column\n",
     "    print(age_column)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Name', 'Age', 'City']\n",
+      "['Alice', '30', 'New York']\n",
+      "['Bob', '35', 'London']\n",
+      "['Charlie', '25', 'San Francisco']\n",
+      "['Xyz', '36', 'Baglore']\n",
+      "['ABC', '14', 'Mumbai']\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('data.csv', mode='r+', newline='', encoding='utf-8') as file:\n",
+    "    reader = csv.reader(file)\n",
+    "    for row in reader:\n",
+    "        print(row)\n",
+    "        \n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow(['ABC', '14', 'Mumbai'])\n",
+    "    \n",
+    "    file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Name', 'Age', 'City']\n",
+      "['Alice', '30', 'New York']\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('data.csv', mode='w+', newline='', encoding='utf-8') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow(['Name', 'Age', 'City'])\n",
+    "    writer.writerow(['Alice', '30', 'New York'])\n",
+    "    \n",
+    "    file.seek(0)\n",
+    "    \n",
+    "    reader = csv.reader(file)\n",
+    "    for row in reader:\n",
+    "        print(row)\n",
+    "    \n",
+    "    file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Name', 'Age', 'City']\n",
+      "['Alice', '30', 'New York']\n",
+      "['Bob', '35', 'London']\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('data.csv', mode='a+', newline='', encoding='utf-8') as file:\n",
+    "    writer = csv.writer(file)\n",
+    "    writer.writerow(['Bob', '35', 'London'])\n",
+    "    \n",
+    "    file.seek(0)\n",
+    "    \n",
+    "    reader = csv.reader(file)\n",
+    "    for row in reader:\n",
+    "        print(row)\n",
+    "        \n",
+    "    file.close()"
    ]
   },
   {
@@ -1125,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1147,28 +1246,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'John', 'age': 30, 'city': 'New York'}\n"
+      "{'name': 'PQR', 'age': 40, 'city': 'London'}\n"
      ]
     }
    ],
    "source": [
-    "import json\n",
-    "\n",
-    "with open(\"data.json\", \"r\") as file:\n",
+    "with open(\"data.json\", \"r\", encoding='utf-8') as file:\n",
     "    data = json.load(file)\n",
-    "    print(data)"
+    "    print(data)\n",
+    "    file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,32 +1287,57 @@
     "]\n",
     "\n",
     "with open(\"data.json\", \"w\") as file:\n",
-    "    json.dump(data, file)\n",
-    "    "
+    "    write = json.dump(data, file, indent=4)\n",
+    "    file.close() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{\"name\": \"Alice\", \"age\": 30, \"city\": \"New York\"}, {\"name\": \"Bob\", \"age\": 25, \"city\": \"Los Angeles\"}, {\"name\": \"Charlie\", \"age\": 35, \"city\": \"Chicago\"}, {\"name\": {\"First_name\": \"777\", \"Last_name\": \"Charli\"}, \"age\": 28, \"city\": \"San Francisco\"}]\n"
+      "[\n",
+      "    {\n",
+      "        \"name\": \"Alice\",\n",
+      "        \"age\": 30,\n",
+      "        \"city\": \"New York\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"Bob\",\n",
+      "        \"age\": 25,\n",
+      "        \"city\": \"Los Angeles\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": \"Charlie\",\n",
+      "        \"age\": 35,\n",
+      "        \"city\": \"Chicago\"\n",
+      "    },\n",
+      "    {\n",
+      "        \"name\": {\n",
+      "            \"First_name\": \"777\",\n",
+      "            \"Last_name\": \"Charli\"\n",
+      "        },\n",
+      "        \"age\": 28,\n",
+      "        \"city\": \"San Francisco\"\n",
+      "    }\n",
+      "]\n"
      ]
     }
    ],
    "source": [
     "with open(\"data.json\", \"r\") as f:\n",
-    "    data = f.read()\n",
-    "    print(data)"
+    "    data = f.read() # txt method\n",
+    "    print(data)\n",
+    "    f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1219,12 +1351,13 @@
    "source": [
     "with open(\"data.json\", \"r\") as f:\n",
     "    data = json.load(f)\n",
-    "    print(data)"
+    "    print(data)\n",
+    "    file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1250,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1273,20 +1406,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_entry = [{\"name\": \"Python\", \"age\": 31, \"city\": \"Bangalore\"}]\n",
+    "new_entry = {\"name\": \"Python\", \"age\": 31, \"city\": \"Bangalore\"}\n",
     "data.append(new_entry)\n",
     "\n",
     "with open(\"data.json\", \"w\") as file:\n",
-    "    json.dump(data, file)"
+    "    json.dump(data, file, indent=4)\n",
+    "    file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1297,15 +1431,98 @@
       "{'name': 'Bob', 'age': 25, 'city': 'Los Angeles'}\n",
       "{'name': 'Charlie', 'age': 35, 'city': 'Chicago'}\n",
       "{'name': {'First_name': '777', 'Last_name': 'Charli'}, 'age': 28, 'city': 'San Francisco'}\n",
-      "[{'name': 'Python', 'age': 31, 'city': 'Bangalore'}]\n"
+      "{'name': 'Python', 'age': 31, 'city': 'Bangalore'}\n"
      ]
     }
    ],
    "source": [
-    "with open(\"data.json\", \"r\") as file:\n",
+    "with open(\"data.json\", \"r\", encoding='utf-8') as file:\n",
     "    data = json.load(file)  # Parse the JSON array\n",
     "    for item in data:\n",
     "        print(item)  # Print each item in the array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Alice', 'age': 30, 'city': 'New York'}, {'name': 'Bob', 'age': 25, 'city': 'Los Angeles'}, {'name': 'Charlie', 'age': 35, 'city': 'Chicago'}, {'name': {'First_name': '777', 'Last_name': 'Charli'}, 'age': 28, 'city': 'San Francisco'}, {'name': 'Python', 'age': 31, 'city': 'Bangalore'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"data.json\", mode='r+', encoding='utf-8') as file:\n",
+    "    data = json.load(file)\n",
+    "    print(data)\n",
+    "    \n",
+    "    data = {\"name\": \"David\", \"age\": 40, \"city\": \"Paris\"}\n",
+    "    \n",
+    "    file.seek(0)\n",
+    "    \n",
+    "    json.dump(data, file, indent=4)\n",
+    "    file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'PQR', 'age': 40, 'city': 'Paris'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = {\"name\": \"PQR\", \"age\": 40, \"city\": \"Paris\"}\n",
+    "\n",
+    "with open(\"data.json\", mode='w+', encoding='utf-8') as file:\n",
+    "    json.dump(data, file)\n",
+    "   \n",
+    "    file.seek(0)\n",
+    "    \n",
+    "    data = json.load(file)\n",
+    "    print(data)\n",
+    "    \n",
+    "    file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"name\": \"PQR\",\n",
+      "    \"age\": 40,\n",
+      "    \"city\": \"London\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"data.json\", mode='r+', encoding='utf-8') as file:\n",
+    "    \n",
+    "    data[\"city\"] = \"London\"\n",
+    "    \n",
+    "    json.dump(data, file, indent=4)\n",
+    "    \n",
+    "    file.seek(0)\n",
+    "    print(file.read())\n",
+    "    \n",
+    "    file.close()"
    ]
   },
   {
