--- a/Python_Basics/5.Loops.ipynb
+++ b/Python_Basics/5.Loops.ipynb
@@ -1909,6 +1909,45 @@
     "mydict3 = {i:i.upper() for i in str1} # Lower to Upper Case\n",
     "mydict3"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "926cddb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 \n",
+      "11 12 13 14 15 16 17 18 19 20 \n",
+      "21 22 23 24 25 26 27 28 29 30 \n",
+      "31 32 33 34 35 36 37 38 39 40 \n",
+      "41 42 43 44 45 46 47 48 49 50 \n",
+      "51 52 53 54 55 56 57 58 59 60 \n",
+      "61 62 63 64 65 66 67 68 69 70 \n",
+      "71 72 73 74 75 76 77 78 79 80 \n",
+      "81 82 83 84 85 86 87 88 89 90 \n",
+      "91 92 93 94 95 96 97 98 99 100 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 101):\n",
+    "    i = str(i)\n",
+    "    print(i, end=' ')\n",
+    "    if i.endswith('0'):\n",
+    "        print(end='\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87e57f58",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
